@@ -1,3 +1,7 @@
+2006-01-17 Vlad Seryakov vlad@crystalballinc.com
+
+	* fixed segv in caching routine, changes logging level
+
 2005-08-01 Vlad Seryakov vlad@crystalballinc.com
 
 	* removed all compat functions
